fix spacing on icon grid text

--- a/sass/modules/icon-grid/_icon-grid.sass
+++ b/sass/modules/icon-grid/_icon-grid.sass
@@ -43,9 +43,9 @@
       float: right
       font-size: em($smallest-point-size)
       font-family: $regular-font
-      margin-top: -1px
+      margin-top: 2px
       margin-right: 10px
-      margin-bottom: 8px
+      margin-bottom: 2px
       display: none
       @include media(min-width $mobile)
         display: block
